2002-03-19  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_oscompat.h (_PATH_DEVNULL): if not defined in unistd.h
	(BK_RHS): force compile error when using ?: or , expression as lvalue

2002-03-19  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_listnum.c: List of linked list heads.  Data structures for
	fixed expiry queues with large numbers of members that get deleted
	and reinserted a lot.

2002-03-18  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_exec.c (bk_pipe_to_exec): Toss stderr if user requests.

2002-03-18  Alexander Dupuy  <dupuy@sysdetect.com>

	* test/Makefile (BK_SIMPLE_INTERNALPROGS): build test_fun with
	funky path to test path stripping

	* test/test_fun.c: simple tests for bk_fun

2002-03-14  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_exec.c (bk_exec): use execvp where possible
	(bk_search_path): the most broken code I have seen in a long time
	- it didn't even come close to working [but was surely faster to write
	than something using g_spawn_async_with_pipes :-]

	* lib/b_url.c (bk_url_unescape): define in terms of bk_url_unescape_len
	(bk_url_unescape_len): this is the more fundamental variant
	(bk_url_getparam): allow alternate delimiters, case-independent tokens,
	whitespace in parameters

2002-03-14  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_url.c (bk_url_unescape_len): Same as bk_url_unescape(),
	but constrained to the given len.

2002-03-11  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c (bk_string_printbuf): Don't write beyond end of str.

2002-03-07  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_pollio.c (bk_polling_io_do_poll): don't block if at EOF

	* lib/b_ioh.c (ioht_vector_other): document one of probably many
	bugs in vectored i/o
	(ioh_runhandler): avoid recursive close when destroying

2002-03-06  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_FLAG_SET, BK_FLAG_CLEAR): make these statement
	macros to prevent inadvertent use in tests where BK_FLAG_IS* is meant