@@ -1,3 +1,7 @@
+2002-03-19  James Tanis  <jtt@saint.sysdetect.com>
+
+	* include/libbk.h (BK_USECTONSEC): Convert usecs <=> nsecs.
+
 2002-03-19  Alexander Dupuy  <dupuy@sysdetect.com>
 
 	* include/libbk_oscompat.h (_PATH_DEVNULL): if not defined in unistd.h
